2015-03-21  Perry McFarlane  <perry_m@mail.com>
* gtia.c: Improve player/playfield collisions for NEW_CYCLE_EXACT


2015-03-20  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: Fix problem when trying to leave the on-screen keyboard
  emulation menu when an override for the DC 'B' button is configured.
  Some other unrelated code cleanups.


2015-03-19  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: Don't inject a "START" button press when leaving the
  on-screen keyboard.


2015-03-17  Perry McFarlane  <perry_m@mail.com>
* antic.c, artifact.c, colours.c, img_tape.c, log.[ch], monitor.c, screen.c,
  sio.c, ui.[ch], sdl/video.c, sdl/video_gl.c, sdl/video_sw.c, win32/sound.c:
  Fix gcc warnings, allow compiling with g++.


2015-03-16  Perry McFarlane  <perry_m@mail.com>
* pia.[ch], pokey.c, statesav.c: Fix PIA CA2/CB2 and irq. Bump
  SAVE_VERSION_NUMBER to 8.


2015-03-14  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sio.c: With SIO patch enabled, replicate behaviour of the real SIO OS
  routine. E.T. Phone Home! now works with SIO patch enabled.


2015-03-11  Perry McFarlane  <perry_m@mail.com>
* cpu.c: Fix opcodes 93, 9b, 9c, 9e, 9f (sha ind_y, shs, shy, shx, sha) page
  crossing behaviour.


2015-03-05  Christian Groessler  <chris@groessler.org>
* ui.c (AboutEmulator): Change copyright year to 2015.
* dc/version.h: Add a knob to switch "beta versions" on and off.
* dc/atari_dc.c: Update on-screen keyboard to current interface of
  ui_basic.c.


2015-02-25  Christian Groessler  <chris@groessler.org>
* configure.ac: If a non-standard location for the X11 libraries was given
  (--x-libraries parameter), add this location to the run-time search path.


2015-02-24  Perry McFarlane  <perry_m@mail.com>
* bit3.c, DOC/NEWS: Invert bit3 cursor, add bit3 NEWS.


2015-02-24  Christian Groessler  <chris@groessler.org>
* atari_x11.c, configure.ac: Add support for palette update in X11 targets.
* gtia.c: Fix compilation of basic (no video) target.

